* May 10, 2007, Flemming H. Sørensen *

Added Bulgarian.

* April 27, 2007, Flemming H. Sørensen *

Added Russian translation to Contact.
Added icon to aclock.
Added screen-res 1280x800 to the sis300 video driver.

* April 27, 2007, Flemming H. Sørensen *

Added Russian translation to Contact.
Added icon to aclock.
Added screen-res 1280x800 to the sis300 video driver.

* April 13, 2007, Kristian Van Der Vliet *

Moved the existing png, jpeg, gif and icon translators into their own directories
Imported new bmp, pcx, tga, tiff, xbm and xpm translators from
Jonas Jarvoll <jonas-jarvoll@syllable-norden.info>

* April 5, 2007, Flemming H. Sørensen *

Updated keymaps from Maritimus.
Updated and New translations from Maritimus.

* April 4, 2007, Arno Klenke *

geforce driver:
	o Added support for geforce 6100 igp
	o Changed some parts of the vga programming code
	o NV40 cards and newer do not support video overlays anymore

Started to move the application list handling into the registrar

---- 0.6.3 Released -------------------------------------------------------------------

* February 24, 2007, Flemming H. Sørensen *

Localized PrintQueue.

* February 21, 2007, Flemming H. Sørensen *

The language-lists in the Locale preferences is now wide enough to show the full languagenames (Bug #109)
Added updated Keymap->Language database to the Keymap preferences (Bug #108)
Keymap preferences can now handle a larger number of language codes, per keymap (Bug #111)

* February 19, 2007, Kaj de Vos *

Moved /atheos/autolnk/ to /usr/indexes/.

* February 18, 2007, Kaj de Vos *

Removed the atheos subdirectory to simplify and flatten the filesystem hierarchy.
Moved /system/libs/ to /system/libraries/.
Note that you have to adapt your GrUB menu.lst file when upgrading.

* February 18, 2007, Flemming H. Sørensen *

New Keyboard pref.

* February 17, 2007, Kristian Van Der Vliet *

The VGA_MISC_OUT_W and VGA_MISC_OUT_R registers were swapped in the Savage driver,